# fontain

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml  site.yml  vhs-auto-commit.yml
media/: banner.typ  demo.tape
src/: main.rs
