[package]
name = "fontain"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
either = "1.15.0"
futures-concurrency = "7.6.3"
reqwest = { version = "0.12.26", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "2.0.2"
zip = "6.0.0"
