[package]
name = "fontain"
version = "0.1.2"
edition = "2024"
license = "WTFPL"
repository = "https://github.com/sermuns/fontain"
description = "cli font installer/downloader"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
either = "1.15.0"
futures-concurrency = "7.6.3"
indicatif = "0.18.3"
isahc = { version = "1.7.2", features = ["json"] }
openssl = { version = "0.10.75", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "2.0.2"
zip = "6.0.0"
